# sfacg

./: .gitignore  .sample.env  AGENTS.md  LICENSE  README.md  app.py  audio.py  audiobooks.json  book.py  build.sh  ch.py  comic.py  ebook.py  main.py  ocr_final.md  ocr_output.txt  ocr_output_mt.txt  opencode.json  pyproject.toml  review.py
examples/: audio_examples.py  auth_examples.py  comic_examples.py  convert_examples.py  fetcher_examples.py  novel_examples.py  ocr_examples.py  search_examples.py
output2/反派小姐，瞎撩女主是会被清算的/: catalog.json
output3/反派小姐，瞎撩女主是会被清算的/: catalog.json  info.md
sfacglib/: __init__.py  audio.py  audiobooks.json  auth.py  base.py  book.py  ch.py  chatbot.py  comic.py  config.py  convert.py  epub.py  epup.py  fetcher.py  llm_vision.py  models.py  nlp.py  novel.py  ocr.py  ocr_fast.py  progress.py  search.py  selectors.json  selectors.py  utils.py  vip.py  web_llm_vision.py
sfacglib/ui/: __init__.py
sfacglib/ui/mobile/: __init__.py  app.py
sfacglib/ui/pc/: __init__.py  app.py  audio_tab.py  comic_tab.py  novel_tab.py  settings_tab.py
sfacglib/ui/web/: __init__.py  server.py
sfacglib/ui/web/templates/: index.html
tests/: test_search.py
