[project]
name = "sfacg"
version = "1.0.0"
description = "SF轻小说多内容下载器 - 小说/漫画/有声/评论"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "ebooklib>=0.20",
    "flet>=0.25.0",
    "loguru>=0.7.3",
    "requests>=2.34.2",
    "tqdm>=4.67.0",
]

[project.scripts]
sfacg = "app:main"
